--- a/css/style.css
+++ b/css/style.css
@@ -17,9 +17,13 @@ body {
 
 header {
 	background-color: #583999;
-	border-bottom: 2px solid #8a8a8f;
+	border-bottom: 2px solid #583999;
 }
 
+
+.status-bar{
+	width: 375px;
+}
 .fa-chevron-left{
 	color: white;
 }
@@ -59,8 +63,9 @@ h2{
 }
 
 h3{
-	margin-top: 1.2em;
-	margin-bottom: .75em;
+	margin-top: 1em;
+	margin-left: .8em;
+	margin-bottom: .6em;
 }
 
 .busNumTitle {
@@ -113,15 +118,8 @@ p {
 }
 
 ul {
-	padding-left: 4%;
-	padding-right: 4%;
-	padding-top: 4%;
-	padding-bottom: 4%;
+	padding: 4% 4% 2% 4%;
 }
-
-/*** Header ***/
-
-
 
 
 /*** Border ***/
