--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ h2{
 }
 
 h3{
-	margin-top: 1em;
+	margin-top: .8em;
 	margin-left: .8em;
 	margin-bottom: .6em;
 }
@@ -118,7 +118,7 @@ p {
 }
 
 ul {
-	padding: 4% 4% 2% 4%;
+	padding: 2% 4% 4% 4%;
 }
 
 
